initial style guide commit

--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
 layout: default
 ---
 
+{% include grid.html %}
 {% include colors.html %}
+{% include typography.html %}
+{% include elements.html %}
