adding in the grid

--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
 ---
-
-{% include grid.html %}
-{% include colors.html %}
-{% include typography.html %}
-{% include elements.html %}
+<div class="container">
+    <div class="inner-container">
+        {% include grid.html %}
+        {% include colors.html %}
+        {% include typography.html %}
+        {% include elements.html %}
+    </div>
+</div>
