added iconography section

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ layout: default
 {% include grid.html %}
 {% include colors.html %}
 {% include typography.html %}
+{% include iconography.html %}
 {% include elements.html %}
