initial header js commit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 ---
 
+{% include elements/header.html %}
 {% include grid.html %}
 {% include colors.html %}
 {% include typography.html %}
