--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@ layout: default
 
 {% include elements/header.html %}
 {% include grid.html %}
+{% include section-break.html %}
 {% include colors.html %}
+{% include section-break.html %}
 {% include typography.html %}
-{% include iconography.html %}
+{% include section-break.html %}
 {% include elements.html %}
