added github links and changed one color

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include elements/header.html %}
+{% include view-github.html %}
 {% include grid.html %}
 {% include section-break.html %}
 {% include colors.html %}
