--- a/index.html
+++ b/index.html
@@ -10,3 +10,4 @@ layout: default
 {% include typography.html %}
 {% include section-break.html %}
 {% include elements.html %}
+{% include armystarlogos.html %}
