--- a/pages/richtext.html
+++ b/pages/richtext.html
@@ -18,6 +18,7 @@ layout: main
       </ul>
       <br><br>
       {% include elements/rich-text.html %}
+      {% include elements/top-btn.html %}
     </div>
   </div>
 </section>
